[tool.poetry]
name = "hypothesis-demo"
version = "0.1.0"
description = ""
authors = ["Piotr Banaszkiewicz <piotr@banaszkiewicz.org>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
hypothesis = "^6.14.7"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
